<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mxpioframework.boot</groupId>
	<artifactId>mxpio-boot-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>mxpio-boot</name>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.3</version>
	</parent>
	<properties>
		<mxpio.version>0.0.1-SNAPSHOT</mxpio.version>
		<java.version>1.8</java.version>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
		<swagger.version>2.9.2</swagger.version>
		<fastjson.version>1.2.76</fastjson.version>
		<druid.version>1.2.6</druid.version>
		<jackson.version>2.11.4</jackson.version>
	</properties>
	<modules>
		<module>mxpio-boot-base-autoconfigure</module>
		<module>mxpio-boot-base-jpa</module>
		<module>mxpio-boot-base-common</module>
		<module>mxpio-boot-base-security</module>
		<module>mxpio-boot-base-cache</module>
		<module>mxpio-boot-module-cache-redis</module>
		<module>mxpio-boot-base-ui</module>
		<module>mxpio-boot-base-system</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.11.Final</version>
		</dependency>

		<!--Spring boot 安全框架 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!--Spring boot Web容器 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- spring boot 缓存 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.mxpioframework.boot</groupId>
				<artifactId>mxpio-boot-base-autoconfigure</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpioframework.boot</groupId>
				<artifactId>mxpio-boot-base-common</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpioframework.boot</groupId>
				<artifactId>mxpio-boot-base-jpa</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpioframework.boot</groupId>
				<artifactId>mxpio-boot-base-security</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpioframework.boot</groupId>
				<artifactId>mxpio-boot-base-cache</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpioframework.boot</groupId>
				<artifactId>mxpio-boot-module-cache-redis</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpioframework.boot</groupId>
				<artifactId>mxpio-boot-base-system</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<!-- starters -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-websocket</artifactId>
				<version>2.4.3</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-actuator</artifactId>
				<version>2.4.3</version>
			</dependency>

			<dependency>
				<groupId>com.github.whvcse</groupId>
				<artifactId>easy-captcha</artifactId>
				<version>1.6.2</version>
			</dependency>

			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>2.2.2</version>
			</dependency>

			<!--Spring boot Redis -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-redis</artifactId>
				<version>2.4.3</version>
			</dependency>
			<!--spring boot 集成redis所需common-pool2 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-pool2</artifactId>
				<version>2.9.0</version>
			</dependency>

			<!-- Swagger UI 相关 -->
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<!-- druid数据源驱动 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>${druid.version}</version>
			</dependency>

			<!-- fastjson -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>3.14.0</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.4</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.15</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>woff</nonFilteredFileExtension>
						<nonFilteredFileExtension>woff2</nonFilteredFileExtension>
						<nonFilteredFileExtension>eot</nonFilteredFileExtension>
						<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
						<nonFilteredFileExtension>svg</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.json</include>
					<include>**/*.ftl</include>
				</includes>
			</resource>
		</resources>
	</build>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://gitee.com/i_mxpio/mxpio-boot/blob/master/LICENSE</url>
			<distribution>repo,manual</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>MxpIO</name>
			<email>i@mxpio.com</email>
			<organization>mxpio</organization>
			<url>https://gitee.com/i_mxpio</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://gitee.com/i_mxpio/mxpio-boot.git</connection>
		<developerConnection>scm:git:https://gitee.com/i_mxpio/mxpio-boot.git</developerConnection>
		<url>https://gitee.com/i_mxpio/mxpio-boot.git</url>
		<tag>0.0.1-SNAPSHOT</tag>
	</scm>
</project>